languages/io-automaton-fe/src/test/resources/invalid/caseConventions.ioautomaton
package invalid;

automaton caseConventions{
    input int A;
    output int B;
    variable int C;
    
    state idle;
    initial idle;
    
}